[package]
name = "nepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.2.6", features = ["serde"] }
infer = "0.3"
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shlex = "1.3.0"
