[package]
name = "nepo"
version = "0.1.0"
edition = "2021"
description = "Open files in your terminal with the appropriate tool depending on the file extension"
authors = ["Frédéric van der Essen"]
license = "GPL-3.0-or-later"
keywords = ["cli", "terminal", "utility", "file"]
categories = ["command-line-utilities"]
homepage = "https://github.com/fvdsn/nepo"
repository = "https://github.com/fvdsn/nepo"
readme = "README.md"

[[bin]]
path = "src/main.rs"
name = "nepo"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.2.6", features = ["serde"] }
infer = "0.3"
mime_guess = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shlex = "1.3.0"
